--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
       <h2 class="hexColor">this hex color code is : <span
        class="hex"></span></h2>
+       <h1>HI WORLD</h1>
        <button type="button" class="hexBtn">press here to change color</button>
   </div>
     <script src="script.js"></script>
